--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 </head>
 <body>
-    <header style="border: 1px solid black;">
+    <header>
     <div class="img-fundo">
         <div class="container menu">
             <nav class="navbar navbar-expand-lg sticky-top">
@@ -67,12 +68,223 @@
     </div> <!-- ./img-fundo -->
     </header>
 
-    <section style="border: 1px solid blue;">
-
+    <section>
+        <div class="container c1">
+            <div class="row mx-auto">
+                <div class="col-12 text-center">
+                    <h1 class="h1Title">What We Do</h1>
+                </div>
+                <div class="col-4 text-center">
+                    <img src="/img/research.png" alt="Open book, magnifying glass search">
+                    <h3>Based on our Research by Our CMT training team, We send you BUY/SELL calls, each day</h3>  
+                </div>
+                <div class="col-4 text-center">
+                    <img src="/img/analytics.png" alt=""> 
+                    <h3>With out tips backed by Research, You make profits and lose less in trading</h3>  
+                </div>
+                <div class="col-4 text-center">
+                    <img src="/img/pie-chart.png" alt="">
+                    <h3>Use our customer referal Programme to increase your credit points with us</h3>
+                </div>
+            </div>
+        </div>
     </section>
+    <section class="sec2">
+        <div class="container c2">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <h1 class="h1Title">How it Works</h1>
+                    <img src="/img/sec2.png" alt="">
+                    <a href="#" class="button">Explore More</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="sec3">
+            <div class="container c3">
+                <div class="row mx-auto">
+                    <div class="col-12 text-center">
+                        <h1 class="h1Title">Our Top Services</h1>
+                    </div>
+                </div>
+                <div class="row mx-auto align-items-center">
+                    <div class="col-2-5 text-center imgColection">
+                        <img  src="/img/Grupo 31.png">
+                        <label class="text">Stock<br>Options</label>
+                    </div>
+                    <div class="col-2-5 text-center imgColection">
+                        <img  src="/img/Grupo 32.png" alt="">
+                        <label class="text1">Bullion<br>Commodities</label>
+                    </div>
+                    <div class="col-2-5 text-center imgColection">
+                        <img  src="/img/Grupo 33.png" alt="">
+                        <label class="text2">Options</label>
+                    </div>
+                    <div class="col-2-5 text-center imgColection">
+                        <img  src="/img/Grupo 34.png" alt="">
+                        <label class="text">Nifty<br>Futures</label>
+                    </div>
+                    <div class="col-2-5 text-center imgColection">
+                        <img  src="/img/Grupo 35.png" alt="">
+                        <label class="text3">Commodity<br>Delivery</label>
+                    </div>
+                </div>
+                <div class="row mx-auto" style="margin-top: 345px;">
+                    <div class="col-12 text-center">
+                        <a href="#" class="button">View All</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="sec4">
+            <div class="container c4">
+                <div class="row align-items-center">
+                    <div class="col-12 text-center">
+                        <h1 class="h1Title">What people say about us</h1>
+                    </div>
+                    <div class="col-6 text-right testimonial">
+                        <div class="row align-items-center">
+                            <div class="col-2">
+                                <img src="/img/anna.png" alt="" class="">  
+                            </div>
+                            <div class="col-10">
+                                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et urna sagittis, rhoncus euismod erat tincidunt. Donec tincidunt volutpat erat."<span>- Anna Carole, Day Trader, Los Angels.</span></p>
+                            </div>
+                            <div class="col-2">
+                                <img src="/img/david.png" alt="">
+                            </div>
+                            <div class="col-10">
+                                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et urna sagittis, rhoncus euismod erat tincidunt. Donec tincidunt volutpat erat."<span>- David Bohema, Seasonal Trader, Chicago.</span></p>
+                            </div>
+                            <div class="col-2">
+                                <img src="/img/ben.png" alt="">
+                            </div>
+                            <div class="col-10">
+                                <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus placerat enim et urna sagittis, rhoncus euismod erat tincidunt. Donec tincidunt volutpat erat."<span>- Ben Button, Student, Stanford.</span></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <a href="#" class="player"><img src="/img/player.png" width="125%"></a>
+                    </div>
+                    <div class="col-12 text-center btn-gs">
+                        <a href="#" class="button">Get Started</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="sec5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <h1 class="h1Title">Market Watch</h1>
+                    </div>
+                    <div class="col-4">
+                        <h3>Our Blog</h3>
+                        <p>Market is gearing up today for the upcoming Budget plan.</p>
+                        <span>August 30, 2017</span>
+                        <p>Tips on Nifty, Bank Nifty & Stocks, learn many more here.</p>
+                        <span>August 15, 2017</span>
+                        <p>Nifty market watch: How to trade efficiently without making loss.</p>
+                        <span>July 21 , 2017</span>
+                    </div>
+                    <div class="col-4">
+                        <h3 style="text-indent: 2rem;">Daily Track Record</h3>
+                        <form class="SingUP ml-auto">
+                            <div class="form-row">
+                                <div class="form-group col-10 offset-1">
+                                    <input type="name" class="form-control" id="inputFrom" placeholder="From">
+                                </div>
+                                <div class="form-group col-10 offset-1">
+                                    <input type="name" class="form-control" id="inputTo" placeholder="To">
+                                </div>
+                                <div class="form-group col-10 offset-1">
+                                    <input type="tel" class="form-control" id="inputStock" placeholder="Stock Cash">
+                                </div>
+                            </div>
+                            
+                            <button type="submit" class="col-10 offset-1 btn btn-custom">Submit</button>
+                        </form>
+                    </div>
+                    <div class="col-4 TwitterFeed">
+                        <h3>Twitter Feed</h3>
+                        <p><span>Market Kings -</span> The best place to double your invested money.</p>
+                        <p><span>Stock world -</span> Yours is the best Service we ever had.</p>
+                        <p><span>Paul Crugman -</span> This is going to be a crazy business.</p>
+                        <p><span>David Brawl -</span> This was my dream when I was young.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <footer style="border: 1px solid red;">
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-2">
+                    <h2>About Us</h2>
+                    <p><a href="#">Why us?</a></p>
+                    <p><a href="#">Our History</a></p>
+                    <p><a href="#">Our Research Team</a></p>
+                    <p><a href="#">FAQs</a></p>
+                    <h2>Services</h2>
+                    <p><a href="#">Stock Futures</a></p>
+                    <p><a href="#">Options Futures</a></p>
+                    <p><a href="#">Our Research Team</a></p>
+                    <p><a href="#">Bullion Commodities</a></p>
+                </div>
+                <div class="col-2 col2">
+                    <p><a href="#">Gold / Silver</a></p>
+                    <p><a href="#">Base Metals</a></p>
+                    <p><a href="#">BTST / STBT Pack</a></p>
+                    <p><a href="#">Stock Cash Premier</a></p>
+                    <p><a href="#">Nify Premier</a></p>
+                    <p><a href="#">Options Premier</a></p>
+                    <p><a href="#">Bullion Commodity Premier</a></p>
+                    <p><a href="#">HNI Consult</a></p>
+                    <p><a href="#">Commodity Delivery</a></p>
+                </div>
+                <div class="col-2 col3">
+                    <p><a href="#">SGX Intraday</a></p>
+                    <p><a href="#">SGX Intraday - Positional</a></p>
+                    <p><a href="#">Malasian Shares - Intraday</a></p>
+                    <p><a href="#">Forex Spot</a></p>
+                    <p><a href="#">Intraday Pack</a></p>
+                    <p><a href="#">Nifty F&O Pack</a></p>
+                    <p><a href="#">Stock Cash</a></p>
+                    <h2><a href="#">Payment</a></h2>
+                </div>
+                <div class="col-2">
+                    <h2><a href="#">Blog</a></h2>
+                    <h2><a href="#">Support</a></h2>
+                    <p><a href="#">Open a ticket</a></p>
+                    <p><a href="#">Help & Support</a></p>
+                    <p><a href="#">Refund Policy</a></p>
+                    <h2><a href="#">Corporate Policies</a></h2>
+                    <h2><a href="#">Careers</a></h2>
+                    <h2><a href="#">Download Brochure</a></h2>
+                </div>
+                <div class="col-4">
+                    <h2><a href="#">Contact</a></h2>
+                    <p>98 West 21th Street,<br>Suite 721 New York NY 10016<br>+ 1235 2355 98<br>info@yoursite.com</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48366.84960428882!2d-74.0287356526333!3d40.74160758508367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c259a37759d6bd%3A0xa9ada13deb17d7c5!2s98%20W%2021st%20St%2C%20New%20York%2C%20NY%2010010%2C%20EUA!5e0!3m2!1spt-BR!2sbr!4v1573747324195!5m2!1spt-BR!2sbr" width="380" height="260" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-4">
+                    <ul>
+                        <li><h2>Follow us on </h2></li>
+                        <li><a href="https://twitter.com/"><i class="fab fa-twitter fa-lg"></i></a></li>
+                        <li><a href="https://www.linkedin.com/uas/login?_l=pt"><i class="fab fa-linkedin-in fa-lg"></i></a></li>
+                        <li><a href="http://fb.com"><i class="fab fa-facebook-f fa-lg"></i></a></li>
+                    </ul>
+                </div>
+                <div class="col-8 text-right">
+                    <p><a href="#">Privacy Policy</a> | <a href="#">Terms and Conditions</a> | Copyright 2017 | All rights reserved</p>
 
+                </div>
+            </div>
+        </div>
     </footer>
 
     <!-- Optional JavaScript -->
